change twitter consumer key.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <!-- Strings used in app ui-->
-    <string name="app_name">TwitterShare</string>
+    <string name="app_name">AutoSMSTweets</string>
     <string name="action_settings">Settings</string>
-    <string name="hello">Hello, </string>
+    <string name="hello">Hello </string>
     <string name="login_instructions">Login to twiter</string>
     <string name="share_instructions">Enter share message</string>
     <string name="btn_login">Login to Twitter</string>
@@ -12,8 +12,8 @@
 
     <!-- Twitter Configurations -->
     <string name="twitter_callback">http://javatechig.android.app</string>
-    <string name="twitter_consumer_key">vM5RNi5CCodJnL7e5BOA</string>
-    <string name="twitter_consumer_secret">FQNS0eBbM8J5DDjDglLCwOvAUUesYhN5uFxdxjKLgk</string>
+    <string name="twitter_consumer_key">9CU8t9x6j3VrfTCpCklhHvRUT</string>
+    <string name="twitter_consumer_secret">I4VuCkJXv6rD1K4xKdsPvrJ9w0j7HlKOoWHa4lAbittl2yZO6M</string>
     <string name="twitter_oauth_verifier">oauth_verifier</string>
     <!-- End Configurations -->
 </resources>
